# uvm-examples

./: .gitignore  README.md  uvm-examples.code-workspace  verible.filelist
examples/assertions/assertion_0/: filelist.f
examples/assertions/assertion_0/src/: Testbench.sv
examples/connect4/: Makefile  README.md  filelist.f
examples/connect4/src/: Board.sv  GamePackage.sv  Testbench.sv  Transaction.sv
examples/counter/: Makefile  README.md
examples/counter/src/: design.vhd
examples/counter/tb/: counter_bfm_pkg.vhd  counter_vvc.vhd  counter_vvc_th.vhd  td_target_support_pkg.vhd  td_vvc_entity_support_pkg.vhd  testbench.vhd  vvc_cmd_pkg.vhd  vvc_methods_pkg.vhd
examples/coverage/cov_0/: Makefile
examples/coverage/cov_0/src/: Testbench.sv
examples/coverage/cov_1/: Makefile
examples/coverage/cov_1/src/: Testbench.sv
examples/mux/: Testbench.sv
examples/uvm_fir_filter/: Makefile  README.md  filelist.f
examples/uvm_fir_filter/python/: .gitignore  README.md  fir.py  fir3.ipynb  pyproject.toml
examples/uvm_fir_filter/python/fpga_fir_toolkit/: __init__.py  adc_simulation.py  filter_design.py  fixed_point.py  hardware_export.py  signal_processing.py
examples/uvm_fir_filter/src/: FIR.sv  Testbench.sv  UVM.sv
examples/uvm_memory/: Makefile  cmd.tcl  filelist.f
examples/uvm_memory/src/: BRAM.sv  Testbench.sv  UVM.sv
examples/uvm_pattern_detector/: Makefile  filelist.f
examples/uvm_pattern_detector/src/: Item.sv  agent.sv  base_test.sv  des_if.sv  det_1011.sv  driver.sv  env.sv  gen_item_seq.sv  monitor.sv  scoreboard.sv  tb.sv
